--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,11 @@
     "baseUrl": "./src",
     "paths": {
       "@/*": ["*"]
-    }
+    },
+    "jsx": "react-jsx",
+    "jsxImportSource": "preact"
   },
-  "include": ["src"]
+  "include": [
+    "src"
+  ]
 }
